--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,69 @@ html {
   background-color: #c9b5ab;
   line-height: 1.5;
   font-weight: normal;
-  font-size: 1.123rem;
+  margin: 0;
+  padding: 0;
 }
 
 h1, h2 {
- color: #3f1622;
-  font-family: "PT Serif", serif;
+  color: #3f1622;
+  font-family: "PT Sans", sans-serif;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
 
 img {
- width: 100%;
+  width: 100%;
+  padding-bottom: 0;
+  margin: 0;
+}
+
+figcaption {
+  font-family: "PT Serif", serif;
+  font-style: italic;
+  text-align: center;
+  font-size: 1.12rem;
+  margin: 0;
+}
+
+.caption {
+  margin: 0;
+}
+
+data {
+  font-family: "PT Serif", serif;
+  font-weight: bold;
+  font-size: 1.125rem;
+  margin: 0;
+  display: block;
+}
+
+a {
+  font-family: "PT Sans", sans-serif;
+  text-decoration: none;
+}
+
+.guide {
+  color: #8f2440;
+  list-style-type: none;
+  font-size: 1.125rem;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #8f2440;
+}
+
+blockquote {
+  padding: 0;
+  margin: 0;
+}
+
+.cp {
+  text-align: left;
+  font-family: "PT Serif", serif;
+  font-size: 1.5em;
+  font-style: italic;
+  padding-left: 1.4rem;
+  padding-right: 1.5rem;
 }
